// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Watchlist component should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="container top-margin"
  >
    <div
      class="ant-row css-dev-only-do-not-override-usln0u"
    >
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-usln0u"
      >
        <div
          class="ant-flex css-dev-only-do-not-override-usln0u ant-flex-align-center ant-flex-gap-middle"
          style="margin-bottom: 24px;"
        >
          <h1
            class="ant-typography css-dev-only-do-not-override-usln0u"
            style="margin-bottom: 0px;"
          >
            Watchlist
          </h1>
        </div>
      </div>
    </div>
    <div
      class="ant-row css-dev-only-do-not-override-usln0u"
      style="margin-left: -12px; margin-right: -12px; row-gap: 16px;"
    >
      <div
        class="ant-col ant-col-24 ant-col-sm-12 ant-col-md-8 ant-col-lg-8 ant-col-xl-6 css-dev-only-do-not-override-usln0u"
        style="padding-left: 12px; padding-right: 12px;"
      >
        <div
          class="ant-card ant-card-bordered ant-card-hoverable css-dev-only-do-not-override-usln0u"
          data-testid="movieItemCard"
        >
          <div
            class="ant-card-cover"
          >
            <img
              alt="test/title"
              height="750"
              loading="lazy"
              src="https://image.tmdb.org/t/p/w500/image"
              width="500"
            />
          </div>
          <div
            class="ant-card-body"
          >
            <div
              class="ant-card-meta"
            >
              <div
                class="ant-card-meta-detail"
              >
                <div
                  class="ant-card-meta-title"
                >
                  test/title
                </div>
                <div
                  class="ant-card-meta-description"
                >
                  test/overview
                </div>
              </div>
            </div>
          </div>
          <ul
            class="ant-card-actions"
          >
            <li
              style="width: 100%;"
            >
              <span>
                <span
                  aria-label="delete"
                  class="anticon anticon-delete"
                  data-testid="deleteMovieBtn"
                  role="img"
                  tabindex="-1"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="delete"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                    />
                  </svg>
                </span>
              </span>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="ant-row ant-row-center css-dev-only-do-not-override-usln0u"
    >
      <div
        class="ant-col css-dev-only-do-not-override-usln0u"
      >
        <ul
          class="ant-pagination pagination css-dev-only-do-not-override-usln0u"
        >
          <li
            aria-disabled="true"
            class="ant-pagination-prev ant-pagination-disabled"
            title="Previous Page"
          >
            <button
              class="ant-pagination-item-link"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                aria-label="left"
                class="anticon anticon-left"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="left"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                  />
                </svg>
              </span>
            </button>
          </li>
          <li
            class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
            tabindex="0"
            title="1"
          >
            <a
              rel="nofollow"
            >
              1
            </a>
          </li>
          <li
            class="ant-pagination-item ant-pagination-item-2"
            tabindex="0"
            title="2"
          >
            <a
              rel="nofollow"
            >
              2
            </a>
          </li>
          <li
            class="ant-pagination-item ant-pagination-item-3"
            tabindex="0"
            title="3"
          >
            <a
              rel="nofollow"
            >
              3
            </a>
          </li>
          <li
            class="ant-pagination-item ant-pagination-item-4"
            tabindex="0"
            title="4"
          >
            <a
              rel="nofollow"
            >
              4
            </a>
          </li>
          <li
            class="ant-pagination-item ant-pagination-item-5 ant-pagination-item-before-jump-next"
            tabindex="0"
            title="5"
          >
            <a
              rel="nofollow"
            >
              5
            </a>
          </li>
          <li
            class="ant-pagination-jump-next ant-pagination-jump-next-custom-icon"
            tabindex="0"
            title="Next 5 Pages"
          >
            <a
              class="ant-pagination-item-link"
            >
              <div
                class="ant-pagination-item-container"
              >
                <span
                  aria-label="double-right"
                  class="anticon anticon-double-right ant-pagination-item-link-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="double-right"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M533.2 492.3L277.9 166.1c-3-3.9-7.7-6.1-12.6-6.1H188c-6.7 0-10.4 7.7-6.3 12.9L447.1 512 181.7 851.1A7.98 7.98 0 00188 864h77.3c4.9 0 9.6-2.3 12.6-6.1l255.3-326.1c9.1-11.7 9.1-27.9 0-39.5zm304 0L581.9 166.1c-3-3.9-7.7-6.1-12.6-6.1H492c-6.7 0-10.4 7.7-6.3 12.9L751.1 512 485.7 851.1A7.98 7.98 0 00492 864h77.3c4.9 0 9.6-2.3 12.6-6.1l255.3-326.1c9.1-11.7 9.1-27.9 0-39.5z"
                    />
                  </svg>
                </span>
                <span
                  class="ant-pagination-item-ellipsis"
                >
                  •••
                </span>
              </div>
            </a>
          </li>
          <li
            class="ant-pagination-item ant-pagination-item-10"
            tabindex="0"
            title="10"
          >
            <a
              rel="nofollow"
            >
              10
            </a>
          </li>
          <li
            aria-disabled="false"
            class="ant-pagination-next"
            tabindex="0"
            title="Next Page"
          >
            <button
              class="ant-pagination-item-link"
              tabindex="-1"
              type="button"
            >
              <span
                aria-label="right"
                class="anticon anticon-right"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="right"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                  />
                </svg>
              </span>
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Watchlist component should match snapshot with 1 page 1`] = `
<DocumentFragment>
  <div
    class="container top-margin"
  >
    <div
      class="ant-row css-dev-only-do-not-override-usln0u"
    >
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-usln0u"
      >
        <div
          class="ant-flex css-dev-only-do-not-override-usln0u ant-flex-align-center ant-flex-gap-middle"
          style="margin-bottom: 24px;"
        >
          <h1
            class="ant-typography css-dev-only-do-not-override-usln0u"
            style="margin-bottom: 0px;"
          >
            Watchlist
          </h1>
        </div>
      </div>
    </div>
    <div
      class="ant-row css-dev-only-do-not-override-usln0u"
      style="margin-left: -12px; margin-right: -12px; row-gap: 16px;"
    >
      <div
        class="ant-col ant-col-24 ant-col-sm-12 ant-col-md-8 ant-col-lg-8 ant-col-xl-6 css-dev-only-do-not-override-usln0u"
        style="padding-left: 12px; padding-right: 12px;"
      >
        <div
          class="ant-card ant-card-bordered ant-card-hoverable css-dev-only-do-not-override-usln0u"
          data-testid="movieItemCard"
        >
          <div
            class="ant-card-cover"
          >
            <img
              alt="test/title"
              height="750"
              loading="lazy"
              src="https://image.tmdb.org/t/p/w500/image"
              width="500"
            />
          </div>
          <div
            class="ant-card-body"
          >
            <div
              class="ant-card-meta"
            >
              <div
                class="ant-card-meta-detail"
              >
                <div
                  class="ant-card-meta-title"
                >
                  test/title
                </div>
                <div
                  class="ant-card-meta-description"
                >
                  test/overview
                </div>
              </div>
            </div>
          </div>
          <ul
            class="ant-card-actions"
          >
            <li
              style="width: 100%;"
            >
              <span>
                <span
                  aria-label="delete"
                  class="anticon anticon-delete"
                  data-testid="deleteMovieBtn"
                  role="img"
                  tabindex="-1"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="delete"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                    />
                  </svg>
                </span>
              </span>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Watchlist component should match snapshot with empty movies 1`] = `
<DocumentFragment>
  <div
    class="container top-margin"
  >
    <div
      class="ant-row css-dev-only-do-not-override-usln0u"
    >
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-usln0u"
      >
        <div
          class="ant-flex css-dev-only-do-not-override-usln0u ant-flex-align-center ant-flex-gap-middle"
          style="margin-bottom: 24px;"
        >
          <h1
            class="ant-typography css-dev-only-do-not-override-usln0u"
            style="margin-bottom: 0px;"
          >
            Watchlist
          </h1>
        </div>
      </div>
    </div>
    <div
      class="css-dev-only-do-not-override-usln0u ant-empty ant-empty-normal"
    >
      <div
        class="ant-empty-image"
      >
        <svg
          height="41"
          viewBox="0 0 64 41"
          width="64"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fill-rule="evenodd"
            transform="translate(0 1)"
          >
            <ellipse
              cx="32"
              cy="33"
              fill="#f5f5f5"
              rx="32"
              ry="7"
            />
            <g
              fill-rule="nonzero"
              stroke="#d9d9d9"
            >
              <path
                d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
              />
              <path
                d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                fill="#fafafa"
              />
            </g>
          </g>
        </svg>
      </div>
      <div
        class="ant-empty-description"
      >
        No results
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Watchlist component should match snapshot with error 1`] = `
<DocumentFragment>
  <div
    class="container top-margin"
  >
    <div
      class="ant-row css-dev-only-do-not-override-usln0u"
    >
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-usln0u"
      >
        <div
          class="ant-flex css-dev-only-do-not-override-usln0u ant-flex-align-center ant-flex-gap-middle"
          style="margin-bottom: 24px;"
        >
          <h1
            class="ant-typography css-dev-only-do-not-override-usln0u"
            style="margin-bottom: 0px;"
          >
            Watchlist
          </h1>
        </div>
      </div>
    </div>
    <div
      class="ant-result ant-result-error css-dev-only-do-not-override-usln0u"
    >
      <div
        class="ant-result-icon"
      >
        <span
          aria-label="close-circle"
          class="anticon anticon-close-circle"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="close-circle"
            fill="currentColor"
            fill-rule="evenodd"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
            />
          </svg>
        </span>
      </div>
      <div
        class="ant-result-title"
      >
        Something went wrong!
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Watchlist component should match snapshot with loading 1`] = `
<DocumentFragment>
  <div
    class="container top-margin"
  >
    <div
      class="ant-row css-dev-only-do-not-override-usln0u"
    >
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-usln0u"
      >
        <div
          class="ant-flex css-dev-only-do-not-override-usln0u ant-flex-align-center ant-flex-gap-middle"
          style="margin-bottom: 24px;"
        >
          <h1
            class="ant-typography css-dev-only-do-not-override-usln0u"
            style="margin-bottom: 0px;"
          >
            Watchlist
          </h1>
        </div>
      </div>
    </div>
    <div
      class="top-margin"
    >
      <div
        class="ant-row ant-row-center css-dev-only-do-not-override-usln0u"
      >
        <div
          class="ant-col css-dev-only-do-not-override-usln0u"
        >
          <div
            aria-busy="true"
            aria-live="polite"
            class="ant-spin ant-spin-spinning css-dev-only-do-not-override-usln0u"
          >
            <span
              class="ant-spin-dot ant-spin-dot-spin"
            >
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
